# Zipimage

./: README.md
quadtree/: CMakeLists.txt  quadtree.h
zipimage/: CMakeLists.txt  FileCompress.cpp  FileCompress.h  TreeCompress.cpp  TreeCompress.h  main.cpp  run.sh
